# quantlink-trade-system

./: .clauderules  .gitignore  ARCHITECTURE_INCONSISTENCY_ANALYSIS.md  CROSS_REFERENCE.md  CTP_POSITION_GUIDE.md  CURRENT_ARCHITECTURE_FLOW.md  DASHBOARD_READY.md  DOCUMENTATION_UPDATE.md  Dockerfile.dev  ESTIMATED_POSITION_FIX_PLAN.md  FINAL_TEST_COMPLETION_REPORT.md  HFTBASE_INTEGRATION_CHALLENGES.md  HOW_TO_ACCESS_DASHBOARD.md  INDICATORS_DATA_FLOW.md  NAMING_FINAL_UPDATE.md  PERFORMANCE_REPORT.md  Phase2-5_完整持仓管理功能实施报告_2026-01-30-11_35.md  QUICKSTART.md  README.md  SHM_COMPARISON.md  SHM_EXAMPLE.md  SIMULATOR_COMPLETION.md  SIMULATOR_TEST_REPORT.md  STAGE3_COMPLETION_STATUS.md  STAGE3_FINAL_COMPLETION_REPORT.md  STAGE3_TESTING_COMPLETION_REPORT.md  TASKS.md  TEST_RESULTS.md  USAGE.md  VSCODE_DEBUG_QUICKSTART.md  WEEK11_12_INDICATOR_LIBRARY_SUMMARY.md  WEEK15_16_PORTFOLIO_RISK_SUMMARY.md  WEEK78_GOLANG_ORS_CLIENT_SUMMARY.md  check_ctp_e2e.sh  close_ag2603.sh  docker-compose.dev.yml  get_market_price.sh  monitor_live.sh  monitor_live_test.sh  query_position.sh  (+12 more)
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: architecture-task-planner.md  cpp-java-translation-verifier.md  cpp-to-java-translator.md
config/: .gitignore  README.md  backtest.yaml  ctp_md.secret.yaml.example  ctp_md.yaml  md_gateway.toml  system.toml  trader.demo.yaml  trader.hot_reload.test.yaml  trader.live.yaml  trader.simple.yaml  trader.test.yaml
config/ctp/: ctp_md.yaml  ctp_td.yaml
data/positions/: live_ag_spread.json  live_au_spread.json
data_new/config/: StrategyConfig.cfg  config_CHINA.92201.cfg  trader.92201.yaml  trader.92202.yaml  trader.yaml
docs/: BUILD_GUIDE.md  CPP_GO_PARITY_REFERENCE.md  DEMO_FIX_REPORT_20260121.md  DOCUMENTATION_UPDATE.md  GATEWAY_IMPLEMENTATION_STATUS.md  Mac开发环境配置_Docker方案_2026-01-26-16_00.md  P1-2_Batch2_震荡指标实施报告_2026-01-28-20_30.md  P1-2_技术指标审查报告_2026-01-28-19_45.md  P1-2_技术指标补充计划_2026-01-28-19_30.md  P1优化_命令行兼容与热加载_完成报告_2026-01-26-13_37.md  PERFORMANCE_REPORT.md  README.md  SHM_COMPARISON.md  SIMPLIFIED_SHM_CAPABILITY_ANALYSIS.md  Trader_P1优化_Model热加载和命令行兼容_2026-01-26-21_30.md  USAGE.md  VSCODE_DEBUG_QUICKSTART.md  WEEK13_14_COMPLETE_STRATEGY_SUITE.md  任务1_CTP行情接入实施指南_2026-01-26-15_40.md  任务4_核心技术指标实施报告_2026-01-28-17_00.md  后续任务_20260120.md  回测_Control+Model机制分析与启发_2026-01-24-20_05.md  回测_P2优化_订单簿深度模拟设计_2026-01-24-21_15.md  回测_使用指南_2026-01-24-19_00.md  回测_参数优化使用指南_2026-01-24-20_30.md  多策略热加载实现报告_2026-01-29-15_35.md  多策略热加载测试指南_2026-01-29-14_50.md  多策略热加载端到端测试报告_2026-01-29-15_50.md  当前状态与下一步_2026-01-26.md  端到端模拟测试报告_20260130.md  端到端测试报告_20260130_002214.md  系统_回测系统实施方案_2026-01-24-18_30.md  系统完善实施计划_2026-01-26.md
docs/archive/: CLEANUP_SUMMARY.md  CURRENT_ARCHITECTURE_FLOW.md  Counter_Bridge_HTTP超时修复报告_2026-01-30-22_30.md  HFTBASE_INTEGRATION_CHALLENGES.md  IPC_COMPARISON_CENTOS.md  Legacy模式热加载演示_2026-01-26.md  NAMING_CONVENTION_UPDATE.md  P1-2_Batch3_进度报告_2026-01-28-21_00.md  PROJECT_OVERVIEW.md  PassiveStrategy热加载实现报告_2026-01-29-15_45.md  Plugin_层_今昨仓支持与CTP_Plugin_实施方案_2026-01-30.md  SHM_EXAMPLE.md  (+34 more)
gateway/: CMakeLists.txt  run_test.sh  test_ctp_login.cpp
gateway/.cache/clangd/index/: counter_api.h.AA7F3C8675FBD41B.idx  main_counter.cpp.E08647694948F2F3.idx  main_md.cpp.5A810146D56FB58F.idx  main_ors.cpp.7C862FE89B9CDDF6.idx  main_shm.cpp.0F48DC6BF31EF984.idx  md_benchmark.cpp.A572E7372C367E13.idx  md_gateway.cpp.A65EB2AABF163EDB.idx  md_gateway.h.310679346E6EBD30.idx  md_simulator.cpp.3D7DFAB79442F6C1.idx  ors_gateway.cpp.BFC3D357D7E20070.idx  ors_gateway.h.AFB053146831E0A6.idx  performance_monitor.h.2F742E554E2A76C4.idx  shm_queue.h.0D8703A6761ADB7E.idx  simulated_counter.cpp.5A2015CA6DF8BA7B.idx  simulated_counter.h.078DBC575195E827.idx
gateway/include/: counter_api.h  ctp_config.h  ctp_md_gateway.h  hftbase_md_types.h  hftbase_shm.h  hftbase_types.h  md_gateway.h  ors_gateway.h  performance_monitor.h  shm_queue.h  simulated_counter.h
gateway/include/plugin/: md_plugin_interface.h  td_plugin_interface.h
gateway/plugins/: README.md
gateway/plugins/ctp/: CMakeLists.txt
gateway/plugins/ctp/config/: ctp_md.secret.yaml.example  ctp_md.yaml.example
gateway/plugins/ctp/include/: ctp_md_gateway.h  ctp_md_plugin.h  ctp_td_config.h  ctp_td_plugin.h
gateway/plugins/ctp/src/: ctp_md_plugin.cpp  ctp_td_config.cpp  ctp_td_plugin.cpp  main_ctp_md.cpp  main_ctp_td.cpp  main_integrated_simple.cpp  main_integrated_test.cpp  main_market_order_test.cpp
gateway/plugins/ctp/test/: README.md  close_position_auto.cpp  close_position_simple.cpp  query_and_close.cpp
gateway/plugins/simulator/: README.md
gateway/plugins/simulator/include/: matching_engine.h  order_book.h  simulator_config.h  simulator_plugin.h
gateway/plugins/simulator/src/: matching_engine.cpp  order_book.cpp  simulator_config.cpp  simulator_plugin.cpp
gateway/proto/: common.proto  market_data.proto  order.proto
gateway/src/: counter_bridge.cpp  ctp_config.cpp  ctp_md_gateway.cpp  main_counter.cpp  main_ctp_md.cpp  main_md.cpp  main_ors.cpp  md_benchmark.cpp  md_gateway.cpp  md_shm_feeder.cpp  md_simulator.cpp  ors_gateway.cpp  simulated_counter.cpp
golang/: INDICATOR_IMPLEMENTATION_STATUS.md  QUICK_START.md  TEST_FIXES_REPORT.md  apiControl.sh  checkTrader.sh  continuous_market_sim.sh  control.txt  go.mod  go.sum  openWebUI.sh  startAllTrades.sh  startTrade.sh  startWebServer.sh  start_all_strategies.sh  start_trader.sh  stopAllTrades.sh  stopTrade.sh  stop_all_strategies.sh  testWebUI.sh  test_ctp_order.go  test_market_data.sh  test_multi_strategy_api.sh  test_simple_server.go  test_trader.sh
production_configs/: trader_92201_optimized_20260124.yaml
scripts/: README.md  build_deploy.sh  build_deploy_java.sh  build_deploy_new.sh  build_gateway.sh  build_golang.sh  generate_proto.sh  install_dependencies.sh  run_test.sh  test_md_gateway_with_nats.sh
tbsrc-golang/: go.mod  go.sum
tbsrc-java/: pom.xml
test_logs/: e2e_hotreload_pids.txt  hot_reload_pids.txt  offset_test_report_20260130_212912.md  offset_test_report_20260130_212923.md  pids.txt  websocket_e2e_test_report.md
(+772 files in other folders)
